Bug 1196124 Fix mismatch of printf style string and following arguments of MOZ_LOG() in IMMHandler::GetCharacterRectOfSelectedTextAt() r=m_kato a=sylvestre

--HG--
extra : source : 55214e2237a3708dbbdf467f34d2b40d2d4792e3